# GAN_PyTorch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/pytorch_tutorial/: __init__.py  main.py
src/pytorch_tutorial/DCGAN/: __init__.py  constants.py  dataset.py  main.py  networks.py  train.py  utils.py
src/pytorch_tutorial/GAN/: __init__.py  generate.py  main.py  model.py  train.py
src/pytorch_tutorial/VAE/: __init__.py  load_data.py  main.py  network.py  train.py
